syntax = "proto3";

package auth_v1;

option go_package = "github.com/BelyaevEI/test-assignment/pkg/auth_v1;auth_v1";

service AuthV1{
    rpc Login(RegistrationRequest) returns (RegistrationResponse);
}

message RegistrationRequest {
    string login = 1;
    string password = 2;
  }
  
  message RegistrationResponse {
    string refresh_token = 1;
  }